@@ -5,7 +5,9 @@ Fixed GET PERFORMANCE command which caused crashes on some systems and DMA probl
 Default to RAW writing mode for Audio CDs which contain zero length pregaps since there are
     so many buggy CD writers out there failing to create proper CDs in that case.
 Backported new device configuration format fixing all issues with removable devices (USB,...)
-
+Fix: Some writers return the number of bytes instead of the number of write speed descriptors
+     in mode page 2a data (thanks to <simon@munton.demon.co.uk>)
+	
 0.11.11
 Qt 3.1 compile fix
 Honor the manual writing app selection for automatic CDRW erasing.
